--- a/index.html
+++ b/index.html
@@ -1140,7 +1140,7 @@
 
     <!-- Scripts -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script">
+    <script>
          // Initialisation de AOS (Animate On Scroll)
         AOS.init({
             duration: 800,
