--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@
                 <div class="portfolio-item">
                     <img src="images/agrise.jpg" alt="Projet 2">
                     <div class="portfolio-info">
-                        <h3>AGRISE/h3>
+                        <h3>AGRISE</h3>
                         <p>Agrise est une plateforme cronstruite pour rassembler tous les acteurs du domaine de l'agriculture et du foncier.</p>
                         <a href="https://agrise-7291a.web.app/" class="btn-small">Étude de cas</a>
                     </div>
