--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@
             </div>
             <div class="portfolio-grid">
                 <div class="portfolio-item">
-                    <img src="images/compo.jpg" alt="Application COMPO">
+                    <img src="logo.png" alt="Application COMPO">
                     <div class="portfolio-info">
                         <h3>COMPO</h3>
                         <p>Application de gestion scolaire (bulletins automatiques, rapports). Utilisée par des écoles publiques et privées en Afrique de l'Ouest.</p>
@@ -661,7 +661,7 @@
                     </div>
                 </div>
                 <div class="portfolio-item">
-                    <img src="images/agrise.jpg" alt="Projet 2">
+                    <img src="iChatGPT Image 26 janv. 2026, 09_48_30.png" alt="Projet 2">
                     <div class="portfolio-info">
                         <h3>AGRISE</h3>
                         <p>Agrise est une plateforme cronstruite pour rassembler tous les acteurs du domaine de l'agriculture et du foncier.</p>
@@ -669,7 +669,7 @@
                     </div>
                 </div>
                 <div class="portfolio-item">
-                    <img src="images/projet3.jpg" alt="Projet 3">
+                    <img src="CompressJPEG.Online_img(512x512) (1).jpg" alt="Projet 3">
                     <div class="portfolio-info">
                         <h3>XOTAAM</h3>
                         <p>Application pour faciliter aux clients de trouver des chauffeurs professionnels.</p>
