--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
                     </div>
                 </div>
                 <div class="portfolio-item">
-                    <img src="iChatGPT Image 26 janv. 2026, 09_48_30.png" alt="Projet 2">
+                    <img src="agrise1.png" alt="Projet 2">
                     <div class="portfolio-info">
                         <h3>AGRISE</h3>
                         <p>Agrise est une plateforme cronstruite pour rassembler tous les acteurs du domaine de l'agriculture et du foncier.</p>
